--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: "3.8"
-
 services:
-
   wordpress_database:
-      container_name: vmangos_database
+      container_name: wordpress_database
     build:
       context: .
       dockerfile: docker/database/Dockerfile
@@ -16,7 +14,7 @@ services:
       MYSQL_USER: '${MYSQL_USER}'
       MYSQL_PASSWORD: '${MYSQL_PASSWORD}'
     volumes:
-      - db-data:/var/lib/mysql
+      - ./vol/database:/var/lib/mysql
     networks:
       - wordpress-network
     deploy:
@@ -25,11 +23,12 @@ services:
           memory: 2048m
 
   wordpress_phpmyadmin:
-    depends_on:
-      - database
-    build:
+        container_name: wordpress_phpmyadmin
+      build:
       context: .
       dockerfile: docker/phpmyadmin/Dockerfile
+    depends_on:
+      - database
     restart: unless-stopped
     ports:
       - 8081:80
@@ -41,28 +40,22 @@ services:
       - wordpress-network
 
   wordpress_lazycms:
-    depends_on:
-      - database
-    build:
+        container_name: wordpress_lazycms
+      build:
       context: .
       dockerfile: docker/wordpress/Dockerfile
+          depends_on:
+      - database
     restart: unless-stopped
     ports:
       - 8080:80
     env_file: .env
     environment:
-      WORDPRESS_DB_HOST: database:3306 # use the same name as database service
+      WORDPRESS_DB_HOST: wordpress_database:3306 # use the same name as database service
       WORDPRESS_DB_NAME: '${MYSQL_DATABASE}'
       WORDPRESS_DB_USER: '${MYSQL_USER}'
       WORDPRESS_DB_PASSWORD: '${MYSQL_PASSWORD}'
     volumes:
-      - ./wp-content:/var/www/html/wp-content
+      - ./vol/content:/var/www/html/wp-content
     networks:
       - wordpress-network
-
-volumes:
-  db-data:
-
-networks:
-  wordpress-network:
-    driver: bridge  
