--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,3 +59,7 @@ services:
       - ./vol/content:/var/www/html/wp-content
     networks:
       - wordpress-network
+
+networks:
+  wordpress-network:
+    driver: bridge  
