--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
 version: "3.8"
 services:
   wordpress_database:
-      container_name: wordpress_database
+    container_name: wordpress_database
     build:
       context: .
       dockerfile: docker/database/Dockerfile
     restart: unless-stopped
-#    ports:
-#      - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
-      MYSQL_DATABASE: '${MYSQL_DATABASE}'
-      MYSQL_USER: '${MYSQL_USER}'
-      MYSQL_PASSWORD: '${MYSQL_PASSWORD}'
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - ./vol/database:/var/lib/mysql
     networks:
@@ -23,8 +21,8 @@ services:
           memory: 2048m
 
   wordpress_phpmyadmin:
-        container_name: wordpress_phpmyadmin
-      build:
+    container_name: wordpress_phpmyadmin
+    build:
       context: .
       dockerfile: docker/phpmyadmin/Dockerfile
     depends_on:
@@ -32,29 +30,27 @@ services:
     restart: unless-stopped
     ports:
       - 8081:80
-    env_file: .env
-    environment:
-      PMA_HOST: database
-      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
+    environment: null
+    PMA_HOST: database
+    MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     networks:
       - wordpress-network
 
   wordpress_lazycms:
-        container_name: wordpress_lazycms
-      build:
+    container_name: wordpress_lazycms
+    build:
       context: .
       dockerfile: docker/wordpress/Dockerfile
-          depends_on:
-      - database
+      depends_on:
+        - database
     restart: unless-stopped
     ports:
       - 8080:80
-    env_file: .env
-    environment:
-      WORDPRESS_DB_HOST: wordpress_database:3306 # use the same name as database service
-      WORDPRESS_DB_NAME: '${MYSQL_DATABASE}'
-      WORDPRESS_DB_USER: '${MYSQL_USER}'
-      WORDPRESS_DB_PASSWORD: '${MYSQL_PASSWORD}'
+    environment: null
+    WORDPRESS_DB_HOST: wordpress_database:3306
+    WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+    WORDPRESS_DB_USER: ${MYSQL_USER}
+    WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - ./vol/content:/var/www/html/wp-content
     networks:
@@ -62,4 +58,4 @@ services:
 
 networks:
   wordpress-network:
-    driver: bridge  
+    driver: bridge
