--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,11 @@ services:
     restart: unless-stopped
     ports:
       - 8080:80
-    environment: null
-    WORDPRESS_DB_HOST: wordpress_database:3306
-    WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
-    WORDPRESS_DB_USER: ${MYSQL_USER}
-    WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
+    environment:
+      WORDPRESS_DB_HOST: wordpress_database:3306
+      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
+      WORDPRESS_DB_USER: ${MYSQL_USER}
+      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - ./vol/content:/var/www/html/wp-content
     networks:
