--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress_user
 MYSQL_PASSWORD=<something>
 MYSQL_ROOT_PASSWORD=<something>
+WORDPRESS_DB_HOST=wordpress_database:3306
