--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wordpress_user
+MYSQL_DATABASE=<something>
+MYSQL_USER=<something>
 MYSQL_PASSWORD=<something>
 MYSQL_ROOT_PASSWORD=<something>
