--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_DATABASE=<something>
-MYSQL_USER=<something>
-MYSQL_PASSWORD=<something>
-MYSQL_ROOT_PASSWORD=<something>
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_DATABASE=drupal
+MYSQL_USER=drupal_database_user
+MYSQL_PASSWORD=drupal_database_password
