--- a/vol/nginx-conf/nginx.conf
+++ b/vol/nginx-conf/nginx.conf
@@ -34,7 +34,7 @@ server {
     add_header Content-Security-Policy "default-src * data: 'unsafe-eval' 'unsafe-inline'" always;
 
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri /index.php$is_args$args;
     }
 
     rewrite ^/core/authorize.php/core/authorize.php(.*)$ /core/authorize.php$1;
