--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./vol/drupal_themes:/var/www/html/themes
       - ./vol/drupal_sites:/var/www/html/sites
     restart: always
+    command: composer require 'drupal/webform_remote_handlers:^3.0'
 
   drupal_database:
     image: mariadb:latest
