--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 
 services:
   drupal:
+    container_name: drupal
     image: drupal:latest
     ports:
       - 80:80
@@ -14,6 +15,7 @@ services:
     command: composer require 'drupal/webform_remote_handlers:^3.0'
 
   drupal_database:
+     container_name: drupal_database
     image: mariadb:latest
     env_file: .env
     volumes:
