--- a/docker/drupal/Dockerfile
+++ b/docker/drupal/Dockerfile
@@ -1,3 +1,3 @@
 FROM drupal
 
-RUN composer require 'drupal/webform_remote_handlers:^3.0'
+RUN composer require 'drupal/webform_remote_handlers:^3.0' -n
