--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.3'
 
 services:
   drupal:
+    container_name: drupal
     build:
       context: .
       dockerfile: docker/drupal/Dockerfile
