--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./vol/drupal_modules:/var/www/html/modules
-      - ./vol/drupal_profiles:/var/www/html/profiles
-      - ./vol/drupal_themes:/var/www/html/themes
-      - ./vol/drupal_sites:/var/www/html/sites
+      - ./vol/drupal_modules:/opt/drupal/web/modules
+      - ./vol/drupal_profiles:/opt/drupal/web/profiles
+      - ./vol/drupal_themes:/opt/drupal/web/themes
+      - ./vol/drupal_sites:/opt/drupal/web/sites
     restart: unless-stopped
 
   drupal_database:
