--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./profiles:/var/www/html/profiles
       - ./themes:/var/www/html/themes
       - ./sites:/var/www/html/sites
+      - ./php:/usr/local/etc/php
     restart: unless-stopped
 
   drupal_database:
