--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./var/www/html/:/var/www/html/
+      - ./var/www/html:/var/www/html
     restart: unless-stopped
 
   drupal_database:
