--- a/docker/drupal/dockerfile
+++ b/docker/drupal/dockerfile
@@ -10,4 +10,4 @@ RUN \
   apt-get install -y \
     git
 
-RUN composer create-project dxpr/dxpr-marketing-cms-project vanillareforged
+RUN --rm -i --tty -v $PWD:/app composer create-project dxpr/dxpr-marketing-cms-project vanillareforged --ignore-platform-reqs
