--- a/docker/drupal/dockerfile
+++ b/docker/drupal/dockerfile
@@ -10,7 +10,7 @@ RUN \
   apt-get install -y \
     git
 
-RUN RUN curl -sS https://getcomposer.org/installer | php -- \
+RUN curl -sS https://getcomposer.org/installer | php -- \
 --install-dir=/usr/bin --filename=composer
 
 RUN composer create-project dxpr/dxpr-marketing-cms-project my_site_name_dir
