--- a/docker/drupal/dockerfile
+++ b/docker/drupal/dockerfile
@@ -13,4 +13,4 @@ RUN \
 RUN curl -sS https://getcomposer.org/installer | php -- \
 --install-dir=/usr/bin --filename=composer
 
-RUN composer create-project dxpr/dxpr-marketing-cms-project my_site_name_dir
+RUN composer create-project dxpr/dxpr-marketing-cms-project vanillareforged
