--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 80:80
       - 443:443
-    volumes:
+#    volumes:
 #      - ./var/www/html:/var/www/html
     restart: unless-stopped
 
