--- a/docker/drupal/dockerfile
+++ b/docker/drupal/dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.2-fpm-alpine
+FROM php:8.3-fpm
 
 RUN { \
     echo 'upload_max_filesize=64M'; \
@@ -7,5 +7,7 @@ RUN { \
 
 RUN curl -sS https://getcomposer.org/installer | php -- \
 --install-dir=/usr/bin --filename=composer
+
+RUN docker-php-ext-install gd 
 
 RUN composer create-project dxpr/dxpr-marketing-cms-project:^10 web
