--- a/docker/drupal/dockerfile
+++ b/docker/drupal/dockerfile
@@ -8,7 +8,7 @@ RUN { \
 RUN curl -sS https://getcomposer.org/installer | php -- \
 --install-dir=/usr/bin --filename=composer
 
-RUN docker-php-ext-install zlib
+RUN docker-php-ext-install zlib1g-dev
 RUN docker-php-ext-install gd
 
 RUN composer create-project dxpr/dxpr-marketing-cms-project:^10 web
