--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 
 services:
-  drupal:
+  wordpress:
     container_name: wordpress
     build:
       context: .
@@ -20,3 +20,12 @@ services:
     volumes:
         - ./var/lib/mysql:/var/lib/mysql
     restart: unless-stopped
+  wordpress_certbot:
+    depends_on:
+      - wordpress
+    image: certbot/certbot
+    container_name: drupal_certbot
+    volumes:
+      - ./etc/letsencrypt:/etc/letsencrypt
+      - ./var/www/html:/var/www/html
+    command: certonly --webroot --webroot-path=/var/www/html --email sammy@your_domain --agree-tos --no-eff-email --force-renewal -d your_domain -d www.your_domain
