--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MYSQL_ROOT_PASSWORD=root_password
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress_database_user
 MYSQL_PASSWORD=wordpress_database_password
+WEBSITE_URL=website_url
