--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     labels:
      - "traefik.enable=true"
      - "traefik.http.routers.wordpress.entrypoints=web, websecure"
-     - "traefik.http.routers.wordpress.rule=Host(`vanillareforged.org`)"
+     - "traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`)"
      - "traefik.http.routers.wordpress.tls=true"
      - "traefik.https.routers.wordpress.tls.certresolver=production"
     image: wordpress:latest
