--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     container_name: wordpress
     labels:
      - "traefik.enable=true"
-     - "traefik.http.routers.wordpress.entrypoints=websecure"
+     - "traefik.http.routers.wordpress.entrypoints=web, websecure"
      - "traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`)"
      - "traefik.http.routers.wordpress.tls=true"
      - "traefik.https.routers.wordpress.tls.certresolver=production"
