--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
      - "traefik.enable=true"
      - "traefik.http.routers.wordpress.entrypoints=web, websecure"
      - "traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`)"
-     - "traefik.http.routers.wordpress.tls=true"
+#     - "traefik.http.routers.wordpress.tls=true"
      - "traefik.https.routers.wordpress.tls.certresolver=production"
     image: wordpress:latest
     networks:
