--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     container_name: wordpress
     labels:
      - "traefik.enable=true"
-     - "traefik.http.routers.wordpress.entrypoints=websecure"
+     - "traefik.http.routers.wordpress.entrypoints=web"
      - "traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`)"
-     - "traefik.http.routers.wordpress.tls=true"
-     - "traefik.https.routers.wordpress.tls.certresolver=production"
+#     - "traefik.http.routers.wordpress.tls=true"
+#     - "traefik.https.routers.wordpress.tls.certresolver=production"
     image: wordpress:latest
     networks:
      - vmangos-network
