--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MYSQL_DATABASE=wordpress
 MYSQL_USER=wordpress_database_user
 MYSQL_PASSWORD=wordpress_database_password
 WEBSITE_URL=website_url.org
+WEBSITE_URL_WWW=www.website_url.org
