--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,16 @@ services:
   wordpress:
     container_name: wordpress
     labels:
-    - traefik.enable=true
-    - traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`) || Host(`${WEBSITE_URL_WWW}`)
-    - traefik.http.services.wordpress.loadbalancer.server.port=80
-    - traefik.http.middlewares.wordpressredirect.redirectregex.regex=^https://www\.(.*)
-    - traefik.http.middlewares.wordpressredirec.redirectregex.replacement=https://$${1}
-    - traefik.http.routers.wordpress.middlewares=wordpressredirec
-    - traefik.http.routers.wordpress.tls.certresolver=production
+     - traefik.enable=true
+     - traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`) || Host(`${WEBSITE_URL_WWW}`)
+     - traefik.http.services.wordpress.loadbalancer.server.port=80
+     - traefik.http.middlewares.wordpressredirect.redirectregex.regex=^https://www\.(.*)
+     - traefik.http.middlewares.wordpressredirec.redirectregex.replacement=https://$${1}
+     - traefik.http.routers.wordpress.middlewares=wordpressredirec
+     - traefik.http.routers.wordpress.tls.certresolver=production
     image: wordpress:latest
+    expose:
+     - 443
     networks:
      - vmangos-network
     restart: unless-stopped
