--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
      - "traefik.enable=true"
      - "traefik.http.routers.wordpress.entrypoints=web"
 #     - "traefik.http.routers.wordpress.entrypoints=websecure"
-     - "traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`)"
+     - "traefik.http.routers.wordpress.rule=Host(`${WEBSITE_URL}`,`${WEBSITE_URL_WWW}`)"
 #     - "traefik.http.routers.wordpress.tls=true"
 #     - "traefik.http.routers.wordpress.tls.certresolver=production"
     image: wordpress:latest
