--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,24 @@ services:
     networks:
      - vmangos-network
     restart: unless-stopped
+
+  traefik:
+    image: traefik:v2.10.4
+    container_name: traefik
+    ports:
+      - 80:80
+      - 443:443
+    # -- (Optional) Enable Dashboard, don't do in production
+    #  - 8080:8080
+    volumes:
+      - ./etc/traefik:/etc/traefik
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    # -- (Optional) When using Cloudflare as Cert Resolver
+    # environment:
+    #   - CF_DNS_API_TOKEN=your-cloudflare-api-token
+    # -- (Optional) When using a custom network
+    networks:
+      - vmangos-network
+    restart: unless-stopped
+
+
