--- a/etc/traefik/traefik.yaml
+++ b/etc/traefik/traefik.yaml
@@ -2,63 +2,63 @@ global:
   checkNewVersion: false
   sendAnonymousUsage: false
 
-# -- (Optional) Change Log Level and Format here...
-#     - loglevels [DEBUG, INFO, WARNING, ERROR, CRITICAL]
-#     - format [common, json, logfmt]
-# log:
-#  level: ERROR
+#-- (Optional) Change Log Level and Format here...
+#    - loglevels [DEBUG, INFO, WARNING, ERROR, CRITICAL]
+#    - format [common, json, logfmt]
+#log:
+# level: ERROR
+# format: common
+# filePath: /var/log/traefik/traefik.log
+
+#-- (Optional) Enable Accesslog and change Format here...
+#    - format [common, json, logfmt]
+#accesslog:
 #  format: common
-#  filePath: /var/log/traefik/traefik.log
+#  filePath: /var/log/traefik/access.log
 
-# -- (Optional) Enable Accesslog and change Format here...
-#     - format [common, json, logfmt]
-# accesslog:
-#   format: common
-#   filePath: /var/log/traefik/access.log
+#-- (Optional) Enable API and Dashboard here, don't do in production
+#api:
+#  dashboard: true
+#  insecure: true
 
-# -- (Optional) Enable API and Dashboard here, don't do in production
-# api:
-#   dashboard: true
-#   insecure: true
-
-# -- Change EntryPoints here...
+#-- Change EntryPoints here...
 entryPoints:
   web:
     address: :80
-    # -- (Optional) Redirect all HTTP to HTTPS
-    #http:
-    #  redirections:
-    #    entryPoint:
-    #      to: websecure
-    #      scheme: https
+#    -- (Optional) Redirect all HTTP to HTTPS
+#    http:
+#      redirections:
+#        entryPoint:
+#          to: websecure
+#          scheme: https
   websecure:
     address: :443
-  # -- (Optional) Add custom Entrypoint
-  # custom:
-  #   address: :8080
+#  -- (Optional) Add custom Entrypoint
+#  custom:
+#    address: :8080
 
-# -- Configure your CertificateResolver here...
-certificatesResolvers:
-  staging:
-    acme:
-      email: your-emaill@vmangos.com
-      storage: /etc/traefik/acme.json
-      caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
-      httpChallenge:
-        entryPoint: web
+#-- Configure your CertificateResolver here...
+#certificatesResolvers:
+#  staging:
+#    acme:
+#      email: your-emaill@vmangos.com
+#      storage: /etc/traefik/acme.json
+#      caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
+#      httpChallenge:
+#        entryPoint: web
 #       -- (Optional) Configure DNS Challenge
 #      dnsChallenge:
 #        provider: your-resolver (e.g. cloudflare)
 #        resolvers:
 #          - "1.1.1.1:53"
 #          - "8.8.8.8:53"
-  production:
-     acme:
-       email: your-emaill@vmangos.com
-       storage: /etc/traefik/acme.json
-       caServer: "https://acme-v02.api.letsencrypt.org/directory"
-       httpChallenge:
-        entryPoint: web
+#  production:
+#     acme:
+#       email: your-emaill@vmangos.com
+#       storage: /etc/traefik/acme.json
+#       caServer: "https://acme-v02.api.letsencrypt.org/directory"
+#       httpChallenge:
+#        entryPoint: web
 #       -- (Optional) Configure DNS Challenge
 #       dnsChallenge:
 #         provider: your-resolver (e.g. cloudflare)
@@ -66,25 +66,25 @@ certificatesResolvers:
 #           - "1.1.1.1:53"
 #           - "8.8.8.8:53"
 
-# -- (Optional) Disable TLS Cert verification check
+#-- (Optional) Disable TLS Cert verification check
 serversTransport:
   insecureSkipVerify: true
 
-# -- (Optional) Overwrite Default Certificates
-# tls:
-#   stores:
-#     default:
-#       defaultCertificate:
-#         certFile: /etc/traefik/certs/cert.pem
-#         keyFile: /etc/traefik/certs/cert-key.pem
-# -- (Optional) Disable TLS version 1.0 and 1.1
-#   options:
-#     default:
-#       minVersion: VersionTLS12
+#-- (Optional) Overwrite Default Certificates
+#tls:
+#  stores:
+#    default:
+#      defaultCertificate:
+#        certFile: /etc/traefik/certs/cert.pem
+#        keyFile: /etc/traefik/certs/cert-key.pem
+#-- (Optional) Disable TLS version 1.0 and 1.1
+#  options:
+#    default:
+#      minVersion: VersionTLS12
 
 providers:
   docker:
-    # -- (Optional) Enable this, if you want to expose all containers automatically
+#-- (Optional) Enable this, if you want to expose all containers automatically
     exposedByDefault: false
   file:
     directory: /etc/traefik
