--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,10 @@ services:
     networks:
       - vmangos-network
     restart: unless-stopped
+    user: "1001:1001"  # User ID and group ID set to 1001
 
   wordpress_database:
-    container_name: wordpress_database
+    container_name: wordpress-database
     image: mariadb:latest
     volumes:
       - ./var/lib/mysql:/var/lib/mysql
@@ -32,6 +33,7 @@ services:
     networks:
       - vmangos-network
     restart: unless-stopped
+    user: "1001:1001"  # User ID and group ID set to 1001
 
   traefik:
     image: traefik:v2.10.4
