--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./var/www/html:/var/www/html
       - ./uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
-    env_file: .env
+    env_file: .env-wordpress
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.wordpress.entrypoints=web"
@@ -29,7 +29,7 @@ services:
     image: mariadb:latest
     volumes:
       - ./var/lib/mysql:/var/lib/mysql
-    env_file: .env
+    env_file: .env-wordpress-database
     networks:
       - vmangos-network
     restart: unless-stopped
@@ -50,6 +50,7 @@ services:
     # environment:
     #   - CF_DNS_API_TOKEN=your-cloudflare-api-token
     # -- (Optional) When using a custom network
+    env_file: .env-traefik
     networks:
       - vmangos-network
     restart: unless-stopped
